# Paperfold

./: README.md  RELEASE_NOTES.md  package-lock.json  package.json
.github/workflows/: release.yml
src/: index.css  types.ts
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/crates/core/: Cargo.toml
src-tauri/crates/core/src/: client.rs  db.rs  lib.rs
src-tauri/crates/daemon/: Cargo.toml
src-tauri/crates/daemon/src/: cache.rs  fs.rs  main.rs
src-tauri/src/: lib.rs  main.rs
src/components/: Auth.tsx  Dashboard.tsx  FileCard.tsx
