[package]
name = "paperfold"
version = "0.1.6"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["crates/core", "crates/daemon"]

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "telegram_cloud_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
paperfold-core = { path = "crates/core" }
tauri = { version = "2.9.5", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
grammers-client = "0.7"
grammers-session = "0.7"
tokio = { version = "1.49.0", features = ["full"] }
uuid = { version = "1.19.0", features = ["v4"] }
tauri-plugin-dialog = "2.5.0"
dotenv = "0.15.0"
grammers-tl-types = "0.7"
rand = "0.8"
mime_guess = "2.0"
chrono = "0.4.43"
zip = "2"
tauri-plugin-shell = "2.3.4"
sysinfo = "0.30"
aes-gcm = "0.10"
pbkdf2 = "0.12"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
