[package]
name = "paperfold-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.19.0", features = ["v4"] }
chrono = "0.4.43"
grammers-client = "0.7"
grammers-session = "0.7"
grammers-tl-types = "0.7"
tokio = { version = "1.49.0", features = ["full"] }
mime_guess = "2.0"
rand = "0.8"
base64 = "0.22"
log = "0.4"
